--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,6 +1,10 @@
---- 
---- 
-@tailwind "tailwindcss/base";
-@tailwind "tailwindcss/components";
-@tailwind "tailwindcss/utilities";
+:root {
+    --font-family-base: 'Ubuntu Mono', sans-serif;
+    --font-base-size: 1.1rem;
+    --background-color: rgb(15, 23, 42);
+}
 
+body {
+    font-family: var(--font-family-base);
+    font-size: var(--font-base-size);
+}
